# Hugobyte

./: rough.txt
docker/test-docker/: Cargo.toml
hello-person-openwhisk-action/: Cargo.toml  README.md
hello-person-openwhisk-action/src/: lib.rs
rustlings/exercises/: quiz1.rs  quiz2.rs
shell_scripting/: arith.sh  arrays.sh  associative-arrays.sh  decision_making.sh  decision_making_2.sh  functions.sh  functions_2.sh  loops_.sh  loops_2.sh  special_variables.sh  string.sh  string2.sh  string3.sh  subs.sh  test.sh  variables.sh
testing/Notes/: BlockChain.txt
testing/assesment_3_5/: Cargo.toml
testing/async_functions/: Cargo.toml
testing/build_scripts/: Cargo.toml
testing/capitalizer/: Cargo.toml
testing/chesterfield/: Cargo.toml
testing/chesterfield/src/: main.rs
testing/chrono_crate/: Cargo.toml
testing/cli_apps/: Cargo.toml  file.txt  output.txt
testing/code-generator-poc/: Cargo.toml  example.star
testing/common_collections/: Cargo.toml
testing/compound_types/: Cargo.toml
testing/convert-usize-to-string/: Cargo.toml
testing/dag_structure/: Cargo.toml  example.star
testing/docker-testing/: docker-compose.yml
testing/docker_image_gen_test/: Cargo.toml  Dockerfile
testing/doubt/: Cargo.toml
testing/encrypt_decrypt/: Cargo.toml
testing/eval1/: Cargo.toml
testing/eval2/: Cargo.toml
testing/factorial_calculator/: note.md
testing/harbourmaster-crate/: Cargo.toml
testing/hello_cargo/: Cargo.toml
testing/hello_world/: main.rs
testing/macro_default_values/: Cargo.toml
testing/macros-for-workflow-structs/: Cargo.toml
testing/mailing_system/: Cargo.toml
testing/mailing_system_through_api/: Cargo.toml
testing/mapping-rust-starlark-data-structures/: README.md
testing/more_cargo_and_crates/: Cargo.toml
testing/oop_of_rust/: Cargo.toml
testing/output/: Cargo.toml
testing/output/src/: common.rs
testing/output2/output2/: Cargo.toml
testing/output2/output2/src/: common.rs  lib.rs  traits.rs  types.rs
testing/postgres_crud_operations/: Cargo.toml
testing/practice_14_09_23/: Cargo.toml
testing/practice_17_7_23/: Cargo.toml
testing/practice_18_7_23/: Cargo.toml  hello.txt
testing/practice_20_7_23/: Cargo.toml
testing/practice_21_7_23/: Cargo.toml
testing/practice_22_7_23/: Cargo.toml
testing/practice_4_8_23/: Cargo.toml  hello.txt
testing/practice_5_8_2023/: Cargo.toml
testing/practice_9_8_23/: Cargo.toml
testing/random-numbers/: Cargo.toml
testing/rust-cargo-package-generators/: README.md
testing/rust-code-generators/: README.md
testing/rust-crud-api/: Cargo.toml
testing/serde_json_examples/: Cargo.toml
testing/src/: main.rs  tempCodeRunnerFile.rs
testing/starlark-rust/: Cargo.toml  create-flow.star  function-call.star  hello_world.star  json.star  test.star  type-annotation.star  using_rust_types.star
testing/starlark_rust_build_doc/: Cargo.toml
testing/test_12_7_23/: Cargo.toml
testing/traits/: Cargo.toml
testing/wasm-rust/rust-macro-wasm-test/: Cargo.toml
testing/wasm-rust/rust-macro-wasm-test/src/: lib.rs
testing/workflow/: Cargo.toml
(+277 files in other folders)
