[package]
name = "checterfield"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actions = "0.2.0"
chesterfield = "0.0.1"
# couchdb = "0.6.0"
# futures = "0.3.28"
# prelude = "0.2.1"

reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"

tokio = { version="1.32.0", features = ["full"]}