[package]
name = "rust-macro-wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive ="1.0.192"
serde = { version = "1.0.192", features = ["derive"] }

[[bin]]
path = "src/lib.rs"
name = "lib"